--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@types/flexsearch": "^0.7.5",
 		"flexsearch": "^0.7.31",
-		"lucide-svelte": "^0.289.0"
+		"lucide-svelte": "^0.289.0",
+		"zod": "^3.22.4"
 	}
 }
