--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/node": "^24.6.2",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@vite-pwa/sveltekit": "^1.0.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -33,7 +34,9 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0",
-		"vitest": "^0.32.2"
+		"vite-plugin-pwa": "^1.1.0",
+		"vitest": "^0.32.2",
+		"workbox-window": "^7.3.0"
 	},
 	"type": "module",
 	"engines": {
